permite compartir cambios de los archivos

--- a/src/net/vjdv/baz/om2/Inicio.fxml
+++ b/src/net/vjdv/baz/om2/Inicio.fxml
@@ -57,6 +57,14 @@
                         <FontAwesomeIconView style="-glyph-name: REFRESH;" />
                     </graphic>
                 </Button>
+                <Button onAction="#compartir">
+                    <tooltip>
+                        <Tooltip text="Compartir cambios"/>
+                    </tooltip>
+                    <graphic>
+                        <FontAwesomeIconView style="-glyph-name: LEVEL_UP;" />
+                    </graphic>
+                </Button>
                 <MenuButton>
                     <tooltip>
                         <Tooltip text="Agregar..."/>
