--- a/src/net/vjdv/baz/om2/Inicio.fxml
+++ b/src/net/vjdv/baz/om2/Inicio.fxml
@@ -123,7 +123,7 @@
                             <contextMenu>
                                 <ContextMenu>
                                     <items>
-                                        <MenuItem mnemonicParsing="false" onAction="#abrirProcedimiento" text="Abrir" />
+                                        <MenuItem mnemonicParsing="false" onAction="#abrirArchivo" text="Abrir" />
                                         <Menu mnemonicParsing="false" text="Copiar">
                                             <items>
                                                 <MenuItem mnemonicParsing="false" onAction="#copiarRecurso" text="Nombre" />
@@ -135,7 +135,7 @@
                                         <MenuItem mnemonicParsing="false" onAction="#editarProcedimiento" text="Editar" />
                                         <MenuItem mnemonicParsing="false" onAction="#quitarElementos" text="Quitar" />
                                         <SeparatorMenuItem mnemonicParsing="false" />
-                                        <MenuItem mnemonicParsing="false" onAction="#crearArchivoParaSP" text="Crear archivo local" />
+                                        <MenuItem mnemonicParsing="false" onAction="#crearArchivo" text="Crear archivo local" />
                                         <MenuItem mnemonicParsing="false" onAction="#abrirUbicacion" text="Abrir ubicación del archivo" />
                                         <SeparatorMenuItem mnemonicParsing="false" />
                                         <Menu mnemonicParsing="false" text="Gestor SQL">
@@ -148,7 +148,7 @@
                                         <SeparatorMenuItem mnemonicParsing="false" />
                                         <Menu mnemonicParsing="false" text="ClearCase">
                                             <items>
-                                                <MenuItem mnemonicParsing="false" onAction="#abrirProcedimiento" text="Abrir archivo" />
+                                                <MenuItem mnemonicParsing="false" onAction="#abrirArchivo" text="Abrir archivo" />
                                                 <MenuItem mnemonicParsing="false" onAction="#abrirUbicacion2" text="Abrir ubicación del archivo" />
                                                 <MenuItem mnemonicParsing="false" onAction="#compararSPCC" text="Comparar con local" />
                                                 <Menu mnemonicParsing="false" text="Copiar de...">
@@ -176,8 +176,12 @@
                             <contextMenu>
                                 <ContextMenu>
                                     <items>
+                                        <MenuItem mnemonicParsing="false" onAction="#abrirArchivo" text="Abrir archivo" />
                                         <MenuItem mnemonicParsing="false" onAction="#copiarRecurso" text="Copiar nombre" />
                                         <MenuItem mnemonicParsing="false" onAction="#editarTabla" text="Editar" />
+                                        <MenuItem mnemonicParsing="false" onAction="#quitarElementos" text="Quitar" />
+                                        <SeparatorMenuItem mnemonicParsing="false" />
+                                        <MenuItem mnemonicParsing="false" onAction="#crearArchivo" text="Crear archivo" />
                                         <SeparatorMenuItem mnemonicParsing="false" />
                                         <MenuItem mnemonicParsing="false" onAction="#dependenciasSql" text="Ver dependencias (SQL)" />
                                     </items>
@@ -200,7 +204,11 @@
                             <contextMenu>
                                 <ContextMenu>
                                     <items>
+                                        <MenuItem mnemonicParsing="false" onAction="#abrirArchivo" text="Abrir" />
                                         <MenuItem mnemonicParsing="false" onAction="#editarSnippet" text="Editar" />
+                                        <MenuItem mnemonicParsing="false" onAction="#quitarElementos" text="Quitar" />
+                                        <SeparatorMenuItem mnemonicParsing="false" />
+                                        <MenuItem mnemonicParsing="false" onAction="#crearArchivo" text="Crear archivo" />
                                     </items>
                                 </ContextMenu>
                             </contextMenu>
