--- a/src/net/vjdv/baz/om2/Inicio.fxml
+++ b/src/net/vjdv/baz/om2/Inicio.fxml
@@ -164,6 +164,7 @@
                                         <SeparatorMenuItem mnemonicParsing="false" />
                                         <MenuItem mnemonicParsing="false" onAction="#crearArchivo" text="Crear archivo local" />
                                         <MenuItem mnemonicParsing="false" onAction="#abrirUbicacion" text="Abrir ubicación del archivo" />
+                                        <MenuItem mnemonicParsing="false" onAction="#githistory" text="Historial" />
                                         <SeparatorMenuItem mnemonicParsing="false" />
                                         <Menu mnemonicParsing="false" text="Gestor SQL">
                                             <items>
